[gd_scene load_steps=23 format=4]

[ext_resource type="Script" path="res://Scripts/Doppelganger.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://pgs0e2w7v6kn" path="res://Assets/Graphics/Char_Afton_Body.png" id="2"]
[ext_resource type="Texture2D" uid="uid://djtay3f4dmu77" path="res://Assets/Graphics/Char_Roman_Doppel_Wear_Head.png" id="3"]
[ext_resource type="Texture2D" uid="uid://dknermkj3othh" path="res://Assets/Graphics/Char_Roman_Doppel_02_Eyes.png" id="4"]
[ext_resource type="Texture2D" uid="uid://dghainqis0i4j" path="res://Assets/Graphics/Char_Gauss_Mouth_Doppel_01.png" id="5"]
[ext_resource type="Texture2D" uid="uid://dqebsrpjie7dh" path="res://Assets/Graphics/Char_Gauss_Mouth_Doppel_05.png" id="6"]
[ext_resource type="Texture2D" uid="uid://kfhsevcgt2px" path="res://Assets/Graphics/Char_Gauss_Mouth_Doppel_03.png" id="7"]
[ext_resource type="Texture2D" uid="uid://kngl6s4flt45" path="res://Assets/Graphics/Char_Gauss_Mouth_Doppel_02.png" id="8"]
[ext_resource type="Texture2D" uid="uid://8rbbu1737gmn" path="res://Assets/Graphics/Char_Gauss_Mouth_Doppel_04.png" id="9"]
[ext_resource type="Texture2D" uid="uid://c55camy7tgxnq" path="res://Assets/Graphics/Char_Barbatos_nose_doppel.png" id="10"]
[ext_resource type="Texture2D" uid="uid://hu4ap3gf88ff" path="res://Assets/Graphics/Char_Roman_Doppel_Extra_Arms.png" id="11"]
[ext_resource type="AudioStream" uid="uid://dr5dpjhv1dted" path="res://Assets/SFX-Music/SFX_Evil_Voice_01.wav" id="12"]
[ext_resource type="AudioStream" uid="uid://btoe0ejjhae76" path="res://Assets/SFX-Music/SFX_Evil_Voice_02.wav" id="13"]
[ext_resource type="AudioStream" uid="uid://c16xlrk8styou" path="res://Assets/SFX-Music/SFX_Evil_Voice_03.wav" id="14"]
[ext_resource type="AudioStream" uid="uid://dyxscs22ka1xs" path="res://Assets/SFX-Music/SFX_Evil_Voice_04.wav" id="15"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5")
}],
"loop": true,
"name": &"CLOSE",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6")
}, {
"duration": 1.0,
"texture": ExtResource("5")
}, {
"duration": 1.0,
"texture": ExtResource("7")
}, {
"duration": 1.0,
"texture": ExtResource("8")
}, {
"duration": 1.0,
"texture": ExtResource("9")
}, {
"duration": 1.0,
"texture": ExtResource("6")
}, {
"duration": 1.0,
"texture": ExtResource("7")
}],
"loop": true,
"name": &"TALK",
"speed": 10.0
}]
script = null

[sub_resource type="Animation" id="2"]
resource_name = "IDLE"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.01, 1.01)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.03, 1.03)]
}
script = null

[sub_resource type="Animation" id="3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Head:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
script = null

[sub_resource type="AnimationLibrary" id="4"]
_data = {
"IDLE": SubResource("2"),
"RESET": SubResource("3")
}
script = null

[sub_resource type="Animation" id="5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
script = null

[sub_resource type="Animation" id="6"]
resource_name = "TALK"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.01, 1.01)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Head:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.015, 1.015)]
}
script = null

[sub_resource type="AnimationLibrary" id="7"]
_data = {
"RESET": SubResource("5"),
"TALK": SubResource("6")
}
script = null

[node name="Doppelganger" type="Node2D"]
position = Vector2(1000, 210)
scale = Vector2(0.75, 0.75)
script = ExtResource("1")

[node name="Body" type="Sprite2D" parent="."]
position = Vector2(-7.33333, 625.167)
texture = ExtResource("2")

[node name="Head" type="Node2D" parent="."]
position = Vector2(-2.66667, 85.3333)

[node name="Head" type="Sprite2D" parent="Head"]
position = Vector2(-21.3333, 18.6667)
texture = ExtResource("3")

[node name="Eyes" type="Sprite2D" parent="Head"]
position = Vector2(-13.3333, -21.3333)
texture = ExtResource("4")

[node name="Mouth" type="AnimatedSprite2D" parent="Head"]
self_modulate = Color(0.901961, 0.862745, 0.756863, 1)
position = Vector2(-6.6667, 144)
sprite_frames = SubResource("1")
animation = &"CLOSE"
frame_progress = 0.904302

[node name="Nose" type="Sprite2D" parent="Head"]
position = Vector2(-5.33333, 5.33333)
rotation = 0.0174533
scale = Vector2(1.3, 1.3)
texture = ExtResource("10")

[node name="Arms" type="Sprite2D" parent="Head"]
position = Vector2(-16, 268)
scale = Vector2(0.75, 0.75)
texture = ExtResource("11")

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("4")
}

[node name="TALK" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("7")
}

[node name="Voice_05" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12")
pitch_scale = 1.5

[node name="Voice_06" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13")

[node name="Voice_07" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14")
pitch_scale = 1.5

[node name="Voice_08" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15")
pitch_scale = 2.0

[connection signal="finished" from="Voice_05" to="." method="_on_voice_finished"]
[connection signal="finished" from="Voice_06" to="." method="_on_voice_finished"]
[connection signal="finished" from="Voice_07" to="." method="_on_voice_finished"]
[connection signal="finished" from="Voice_08" to="." method="_on_voice_finished"]
